2013-05-27  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/im2dmatrix.cpp: (0.2.3)

	- Fix bug. Neighbours were inconsistently taken into account, but
	not recorded in jc if their intensity value is 0. Now all
	neighbours are taken into account, and if their distance*mean
	intensity==0, it's still considered a connection. Apparently,
	sparse matrices in Matlab consider missing elements as an implicit
	0, but an explicit 0 in a sparse matrix is not a nonzero element.

2013-03-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/dijkstra.m: (0.3.0)
	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.3.0)
	* matlab/test/test_dijkstra.m: (0.3.0)

	- Add piggyback extension. The motivation is being able to find
	shortest-paths according to the intensities in a greyscale image,
	but also compute the actual length of those paths without having
	to backtrack the list of predecessors with graphpred2path(). In
	that case, G contains intensity-weighted distances, and is the
	graph used for finding shortest-paths. G2 contains actual
	Euclidean distances.

	* Add matlab/test/Dijkstra_Animation_wikipedia.gif:

	- Image to illustrate the graph used in matlab/test/test_dijkstra.m.

	* matlab/GerardusCommon.h: (0.9.1)

	- Fix bug. Missing include header.

2013-03-13  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/im2dmatrix.cpp: (0.2.2)

	- Make it interruptible by Ctrl+C in Matlab.

2013-03-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/im2dmatrix.cpp: (v0.2.1)

	- Make MEX function interruptible with CTRL+C.

2013-03-08  Ramon Casero  <rcasero@gmail.com>

	* Add subversion properties to
	matlab/FiltersToolbox/bw_sb_interp.m and
	matlab/ThirdPartyToolbox/nifti.

2013-03-08  Valentina Carapella <vcarapella@gmail.com>

	* Add matlab/ThirdPartyToolbox/nifti:

	- Toolbox by Jimmy Shen to load, save, make, reslice, view (and
	edit) both NIfTI and ANALYZE data on any platform, downloaded
	today from
